--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <h2>HAPPY ADULF 420</h2>
                         <p>HAPPY ADULF 420 is a memecoin with no intrinsic value or expectation of financial return. There is no formal team or roadmap. the coin is for entertainment purposes only.</p>
                         </br>
-                        <p>2024 ALL Soldyer </p>
+                        <p>2024 ALL HAPPY ADULF 420 </p>
                     </div>
                     <div class="col-lg-6">
                         <ul>
