--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                                 </h2>
                                 <a href="https://jup.ag/swap/SOL-HAPPY ADULF 420_0x00000000000000000" class="btn by-btn" target="_blank">BUY HERE</a>
                                 <ul>
-                                    <li><a href="https://twitter.com/" target="_blank"><img src="assets/images/icon01.png" alt=""></a></li>
+                                    <li><a href="https://x.com/happyadulf?s=21" target="_blank"><img src="assets/images/icon01.png" alt=""></a></li>
                                     <li><a href="https://www.coingecko.com/en/coins/" target="_blank"><img src="assets/images/icon02.png" alt=""></a></li>
-                                    <li><a href="https://t.me/" target="_blank"><img src="assets/images/icon03.png" alt=""></a></li>
+                                    <li><a href="https://t.me/adulf420" target="_blank"><img src="assets/images/icon03.png" alt=""></a></li>
                                     <li><a href="https://dexscreener.com/solana/0x00000000000000000" target="_blank"><img src="assets/images/icon04.png" alt=""></a></li>
                                 </ul>
                                 <ul>
@@ -199,9 +199,9 @@
                     </div>
                     <div class="col-lg-6">
                         <ul>
-                            <li><a href="https://twitter.com/" target="_blank"><img src="assets/images/icon09.png" alt=""></a></li>
+                            <li><a href="https://x.com/happyadulf?s=21" target="_blank"><img src="assets/images/icon09.png" alt=""></a></li>
                             <li><a href="https://www.coingecko.com/en/coins/" target="_blank"><img src="assets/images/icon10.png" alt=""></a></li>
-                            <li><a href="https://t.me/" target="_blank"><img src="assets/images/icon11.png" alt=""></a></li>
+                            <li><a href="https://t.me/adulf420" target="_blank"><img src="assets/images/icon11.png" alt=""></a></li>
                             <li><a href="https://dexscreener.com/solana/0x00000000000000000" target="_blank"><img src="assets/images/icon12.png" alt=""></a></li>
                         </ul>
                         <!-- <h5 class="tr">yescoinbase@gmail.com</h5> -->
